Fix z-index values again
Fixing z-index values again

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ html {
   top: 150px;
   right: 420px;
   transform: rotate(5deg);
+  z-index: 500;
 }
 
 .polaroid:nth-child(3) {
@@ -33,7 +34,7 @@ html {
 
 .polaroid:hover {
   transform: rotate(0deg);
-  z-index: 1;
+  z-index: 1000;
   box-shadow: 0 0 30px 5px #000;
 }
 
